@@ -1,3 +1,5 @@
+3662.	[bug]		'host' could die if a UPD query timed out. [RT #34870]
+
 3661.	[bug]		Address lock order reversal deadlock with inline zones.
 			[RT #34856]
 
